// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`New Hero Image 1`] = `
<div
  className="css-1fhp3ao-StyledHero e18yskrt0"
>
  <img
    alt="hero-banner"
    src="test-image-stub"
  />
</div>
`;

exports[`Style 1`] = `
<div
  className="css-1fhp3ao-StyledHero e18yskrt0"
/>
`;
